--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,15 +40,15 @@ jobs:
       run: |
 
         #pyinstaller -c –-paths ./tigerhx --icon=./tigerhx/exe/${{ matrix.py }}/ico.ico --add-data "./tigerhx/exe/onnxruntime_providers_shared.dll;onnxruntime/capi" -F ./tigerhx/${{ matrix.py }}.py
-        pyinstaller -c -p ./tigerhx --icon=./tigerhx/exe/${{ matrix.py }}/ico.ico --add-data "./tigerhx/exe/onnxruntime_providers_shared.dll;onnxruntime/capi" -F ./tigerhx/${{ matrix.py }}.py
+        pyinstaller -c -p ./tigerhx --icon=./tigerhx/exe/ico.ico --add-data "./tigerhx/exe/onnxruntime_providers_shared.dll;onnxruntime/capi" -F ./tigerhx/${{ matrix.py }}.py
     - name: Run Pyinstaller  2
       if: matrix.os == 'ubuntu-18.04'
       run: |
-        pyinstaller -c -p ./tigerhx --icon=./tigerhx/exe/${{ matrix.py }}/ico.ico --add-data ./tigerhx/exe/libonnxruntime_providers_shared.so:onnxruntime/capi -F ./tigerhx/${{ matrix.py }}.py
+        pyinstaller -c -p ./tigerhx --icon=./tigerhx/exe/ico.ico --add-data ./tigerhx/exe/libonnxruntime_providers_shared.so:onnxruntime/capi -F ./tigerhx/${{ matrix.py }}.py
     - name: Run Pyinstaller 3
       if: matrix.os == 'macos-latest'
       run: |
-        pyinstaller -c -p ./tigerhx --icon=./tigerhx/exe/${{ matrix.py }}/ico.ico --add-data ./tigerhx/exe/libonnxruntime_providers_shared.so:onnxruntime/capi -F ./tigerhx/${{ matrix.py }}.py
+        pyinstaller -c -p ./tigerhx --icon=./tigerhx/exe/ico.ico --add-data ./tigerhx/exe/libonnxruntime_providers_shared.so:onnxruntime/capi -F ./tigerhx/${{ matrix.py }}.py
 
         
     - uses: actions/upload-artifact@v3
