--- a/.github/workflows/gui-app.yml
+++ b/.github/workflows/gui-app.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip        
         pip install .
-        pip install pyinstaller onnxruntime scikit-image
+        pip install pyinstaller onnxruntime scikit-image matplotlib
     - name: Run Pyinstaller 1
       if: matrix.os == 'windows-latest'
       run: |
