--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 models/
 output/
 sample/
+backup/
 *.py[cod]
 *$py.class
 .ipynb_checkpoints/
@@ -13,6 +14,7 @@ sample/
 .Python
 ignore/
 build/
+
 develop-eggs/
 dist/
 downloads/
